--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ VITE_FIREBASE_AUTHDOMAIN="shimmercal.firebaseapp.com"
 VITE_FIREBASE_PROJECTID="shimmercal"
 VITE_FIREBASE_STORAGEBUCKET="shimmercal.appspot.com"
 VITE_FIREBASE_MESSAGINGSENDERID="1020292218490"
-VITE_FIREBASE_APPID="1:1020292218490:web:bdab1bc96df66658ee05c3
+VITE_FIREBASE_APPID="1:1020292218490:web:bdab1bc96df66658ee05c3"
+VITE_ADMIN_EMAIL="unitehenry@gmail.com"
